--- a/jmxtrans-output/jmxtrans-output-influxdb/pom.xml
+++ b/jmxtrans-output/jmxtrans-output-influxdb/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.jmxtrans</groupId>
 		<artifactId>jmxtrans-output</artifactId>
-		<version>270</version>
+		<version>270-e.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jmxtrans-output-influxdb</artifactId>
