--- a/jmxtrans-packaging/pom.xml
+++ b/jmxtrans-packaging/pom.xml
@@ -29,7 +29,7 @@
 	<parent>
 		<groupId>org.jmxtrans</groupId>
 		<artifactId>jmxtrans-parent</artifactId>
-		<version>270</version>
+		<version>270-e.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jmxtrans-packaging</artifactId>
