--- a/jmxtrans-test-utils/pom.xml
+++ b/jmxtrans-test-utils/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.jmxtrans</groupId>
 		<artifactId>jmxtrans-parent</artifactId>
-		<version>270</version>
+		<version>270-e.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jmxtrans-test-utils</artifactId>
